2009-11-06 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-rig-ctrl.c:
    * src/gtk-rot-ctrl.c:
    * src/main.c:
    * win32/Makefile:
    * win32/build-config.h:
    * win32/config.mk:
    * win32/gpredict.exe.manifest:
    * win32/gpredict.rc:
    Applied patch 2893617 from Valentin Yakovenkov fixing various windows issues.



2009-10-27 Alexandru Csete <oz9aec at gmail.com>

    * src/tle-update.c:
    Fixed bug that broke TLE update from network, caused by attempts to
    double-lock the tle_in_progress mutex.
    

2009-10-25 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-sat-module-popup.c:
    * src/gtk-rig-ctrl.c:
    * src/gtk-rig-ctrl.h:
    * src/main.c:
    * src/gtk-sat-module.c:
    * src/gtk-sat-module.h:
    * src/gtk-rot-ctrl.c:
    * src/gtk-rot-ctrl.h:
    Applied patch 2881367 from Charles Suprin AA1VS.


2009-10-13 Alexandru Csete <oz9aec at gmail.com>

    * src/tle-update.c:
    Applied patch 2877878 and 2877918 from Charles Suprin AA1VS.

    * src/gtk-rig-ctrl.c:
    Fixed bug 2877974: Incorrect uplink Doppler.

    * src/sat-cfg.c:
    Changed some defaults for the map view.

    * data/Amateur.mod:
    Added SO-50 to list of satellites in the default module.


2009-10-12 Alexandru Csete <oz9aec at gmail.com>

    * data/trsp:
    Added transponder data for new cubesats.

    * data/satdata:
    Updated satellite data. Replaced 2009+051B/C/D/E names for new cubesats
    with real names based on latest guess by DK3WN.

    * src/gtk-rot-ctrl.c:
    Fixed memory leak (thanks to Charles Suprin AA1VS for patch).    


2009-09-05 Alexandru Csete <oz9aec at gmail.com>

    * src/sat-pass-dialogs.c:
    Implemented double click in multi-pass table will show the details of the
    clicked pass.

    * src/menubar.c:
    Added link to online documentation.


2009-10-03 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-sat-selector-c:
    Added proper cell rendering of Epoch field.


2009-09-27 Alexandru Csete <oz9aec at gmail.com>
